--- a/style.css
+++ b/style.css
@@ -7,13 +7,31 @@
     scroll-behavior: smooth;
     scroll-padding: 2rem;
 }
-
+ 
 body {
     background-color: #0a090f;
 }
 
 #main {
     display: flex;
+}
+
+#logout {
+    position: fixed;
+    right: 1rem;
+    top: 1rem;
+    border-radius: 7px;
+    padding: 10px;
+    background-color: #f1b9b9;
+    font-size: small;
+    font-weight: 700;
+    text-decoration: none;
+    z-index: 100;
+}
+
+#logout:hover {
+    background-color: #b87f7f;
+    color: #0a090f;
 }
 
 #sidebar {
@@ -24,12 +42,13 @@ body {
     height: 100vh;
     width: 15%;
     background-color: #131111;
+    font-size: 12px;
 }
 
 #upper-sidebar-container {
     display: flex;
     flex-direction: column;
-    height: 70%;
+    height: 100%;
 }
 
 #cm-text {
@@ -79,6 +98,10 @@ body {
 
 #helpful-links {
     margin-top: 50px;
+}
+
+#movie-types ul li, #helpful-links ul li {
+    font-size: 14px;
 }
 
 .link-group {
@@ -133,7 +156,7 @@ body {
     transition: 1s;
     margin-left: 15%;
     width: 85%;
-    font-size: 5rem;
+    font-size: 4rem;
     font-family: 'Homemade Apple', cursive;
     text-align: center;
     z-index: 5;
@@ -610,6 +633,95 @@ body {
 
 
 
+/* Founders (Group Members) */
+
+
+#featured-founders {
+    position: relative;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 50px;
+    background-color: #0c0f18;
+}
+
+#featured-founders h1 {
+    align-self: flex-start;
+    border-left: 5px solid #ff9696;
+    padding-left: 20px;
+    margin-bottom: 30px;
+    margin-left: 2.5%;
+    font-size: 1.7rem;
+}
+
+#founders-container {
+    position: relative;
+    /* border-radius: 15px; */
+    overflow: hidden;
+    width: 500px;
+    height: 500px;
+}
+
+#founders-container .founder {
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+#founders-container .founder.active {
+    display: block;
+}
+
+#founders-nav-container {
+    justify-content: space-between;
+    display: flex;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    width: 70px;
+    height: 15px;
+}
+
+#founders-nav-container .founder-nav {
+    border-radius: 50%;
+    width: 15px;
+    height: 100%;
+    background-color: #d6d5d5;
+    cursor: pointer;
+}
+
+#founders-nav-container .founder-nav.active {
+    background-color: #ff5fb7;
+}
+
+.nav-arrow {
+    position: absolute;
+    opacity: 0.1;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.nav-arrow:hover {
+    opacity: 1;
+    transform: scale(1.02);
+    color: #f5d0d0;
+}
+
+#arrow-R {
+    right: 10rem;
+    top: 45%;
+    font-size: 5rem;
+}
+
+#arrow-L {
+    left: 10rem;
+    top: 45%;
+    font-size: 5rem;
+}
+
+
+
 /* mobile navigation */
 
 #mobile-nav-container {
@@ -640,6 +752,7 @@ body {
     height: 100vh;
     width: 0;
     background-color: #131111;
+    font-size: 12px;
 }
 
 #mobile-nav-container:active #sidebar-mobile, #mobile-nav-container:focus-within #sidebar-mobile {
@@ -650,7 +763,7 @@ body {
 #upper-sidebar-container-mobile {
     display: flex;
     flex-direction: column;
-    height: 70%;
+    height: 100%;
 }
 
 #cm-text-mobile {
@@ -860,6 +973,12 @@ body {
 
 @media screen and (max-width: 670px) {
 
+    #logout {
+        border-radius: 3.5px;
+        padding: 5px;
+        font-size: 0.5rem;
+    }
+
     #banner {
         height: 500px;
     }
@@ -924,5 +1043,28 @@ body {
     #about-us-container ul li {
         font-size: 1.2rem;
     }
+
+    #featured-founders {
+        padding: 0;
+        padding-bottom: 50px;
+    }
+
+    #founders-container {
+        height: 250px;
+        width: 250px;
+    }
+
+    #arrow-R {
+    right: 1rem;
+    top: 45%;
+    font-size: 3rem;
+    }
+
+    #arrow-L {
+        left: 1rem;
+        top: 45%;
+        font-size: 3rem;
+    }
+
 
 }
